--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,8 +1,9 @@
 $navbar-dark-brand-color: white;
 $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 
-$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-
+$font-family-sans-serif: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
+  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
 @import "ember-bootstrap/bootstrap";
 
@@ -22,6 +23,10 @@ $font-family-sans-serif:      -apple-system, BlinkMacSystemFont, Roboto, "Segoe 
 
 .w-250 {
   width: 250px;
+}
+
+.vw-8 {
+  width: 8vw !important;
 }
 
 .d-inline {
@@ -278,7 +283,7 @@ li a {
 }
 
 .border-radius-4 {
-  border-radius: 4px
+  border-radius: 4px;
 }
 
 #locale-dropdown > div {
@@ -314,7 +319,7 @@ li a {
 }
 
 .overflow-hidden {
-   overflow: hidden;
+  overflow: hidden;
 }
 
 .account-row:first-child {
