Add new Route and update path regex

--- a/frontend/app/templates/admin/settings.hbs
+++ b/frontend/app/templates/admin/settings.hbs
@@ -1,32 +1,1 @@
-<div class="container py-2">
-  <div class="mt-4">
-    <h5><b>Whitelisted Countries</b></h5>
-    <PowerSelectMultiple
-            @searchEnabled={{true}}
-            @options={{this.names}}
-            @selected={{this.name}}
-            @placeholder="Select some names..."
-            @onChange={{fn (mut this.name)}} as |name|>
-      {{name}}
-    </PowerSelectMultiple>
-    If nothing is selected, only private and whitelisted ips are authorized
-    <h5><b>Whitelisted ips</b></h5>
-    <PowerSelectMultiple
-            @searchEnabled={{true}}
-            @options={{this.names}}
-            @selected={{this.name}}
-            @placeholder="Select some names..."
-            @onChange={{fn (mut this.name)}} as |name|>
-      {{name}}
-    </PowerSelectMultiple>
-    To specify a single IP address, just enter it like: <kbd class="ip-highlight">192.0.2.10</kbd>.<br>
-
-    To specify a range you can enter the IP address with the subnet mask: <kbd>192.0.2.0/24</kbd>. This would be the range between <kbd>192.0.2.0</kbd> and <kbd>192.0.2.255</kbd><br>
-
-    IPv6 is allowed and can be entered like this: <kbd>2001:db8::/32</kbd> <br>
-
-    <BsButton @type="primary" @icon="glyphicon glyphicon-download">
-      Save Changes
-    </BsButton>
-  </div>
-</div>
+<Admin::Settings></Admin::Settings>
