--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -76,7 +76,7 @@
             <dd.toggle><span class="ml-3 navbar-brand settings-dropdown">Settings</span></dd.toggle>
             <dd.menu as |ddm|>
               <ddm.item>
-                <ddm.linkTo @route="/admin/settings">General</ddm.linkTo>
+                <ddm.linkTo @route="admin.settings">General</ddm.linkTo>
               </ddm.item>
             </dd.menu>
           </BsDropdown>
