Fix rails 6.1 path bug, remove change locale from legacy view template

--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -5,5 +5,5 @@
 
 %h1= t '.title'
 - @submit_button_text = t(:create)
-- @form_url = admin_users_path
+- @form_url = Rails.application.routes.url_helpers.admin_users_path
 = render 'form'
