--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -7,7 +7,7 @@
 
 %h1= t '.title'
 - if policy(User::Human).new?
-  = link_to t('admin.users.new.title'), new_admin_user_path, class: 'btn btn-primary pull-right'
+  = link_to t('admin.users.new.title'), Rails.application.routes.url_helpers.new_admin_user_path, class: 'btn btn-primary pull-right'
 %table.table.table-striped#team_table
   %tr
     %th= t '.username'
@@ -31,10 +31,10 @@
         = Admin::UserRole::Dropdown.new(user, current_user).render
       %td
         - if policy(user).edit? || policy(user).resetpassword?
-          = link_to image_pack_tag("edit.svg", class: 'icon'), edit_admin_user_path(user), class: 'action_icon'
+          = link_to image_pack_tag("edit.svg", class: 'icon'), Rails.application.routes.url_helpers.edit_admin_user_path(user), class: 'action_icon'
         - if policy(user).destroy?
           = link_to image_pack_tag("remove.svg", class: 'icon'), '#',
-            data: { last_teammember_teams_link: api_last_member_teams_path(user_id: user.id),
+            data: { last_teammember_teams_link: Rails.application.routes.url_helpers.api_last_member_teams_path(user_id: user.id),
               user_id: user.id},
             class: 'delete_user_link action_icon'
 - if User::Human.locked.count != 0
@@ -46,10 +46,10 @@
       %th= t '.action'
     - User::Human.locked.each do |user|
       %tr{class: "#{cycle( 'odd', 'even' )}"}
-        %td= link_to user.username, edit_admin_user_path(user)
+        %td= link_to user.username, Rails.application.routes.url_helpers.edit_admin_user_path(user)
         %td= user.label
         %td.action_icon
-          = link_to image_pack_tag("unlock.svg", class: 'icon'),  unlock_admin_user_path(user.id), title: t('.unlock')
+          = link_to image_pack_tag("unlock.svg", class: 'icon'),  Rails.application.routes.url_helpers.unlock_admin_user_path(user.id), title: t('.unlock')
 
 %div{style: "height: 100px"}
 
