--- a/app/views/session/_user_password.html.haml
+++ b/app/views/session/_user_password.html.haml
@@ -1,5 +1,5 @@
 .login-form
-  = form_tag(session_path, class: 'login') do
+  = form_tag(Rails.application.routes.url_helpers.session_path, class: 'login') do
     %fieldset
       = image_pack_tag "cryptopussy.svg", class: 'logo'
       .form-group
