--- a/app/views/session/_oidc.html.haml
+++ b/app/views/session/_oidc.html.haml
@@ -3,4 +3,4 @@
   .form-group
     .alert.alert-login-box.alert-info
       = t('.sleep')
-    = link_to(t('.submit'), root_path, class: 'btn btn-primary')
+    = link_to(t('.submit'), Rails.application.routes.url_helpers.root_path, class: 'btn btn-primary')
