Adjust ember nested component access, refs: #403

--- a/frontend/app/templates/accounts/edit.hbs
+++ b/frontend/app/templates/accounts/edit.hbs
@@ -1,1 +1,1 @@
-<AccountForm @account={{this.model}} @title={{t "accounts.edit.title"}}/>
+<Account::Form @account={{this.model}} @title={{t "accounts.edit.title"}}/>
