--- a/frontend/app/templates/accounts/new.hbs
+++ b/frontend/app/templates/accounts/new.hbs
@@ -1,1 +1,1 @@
-<AccountForm @folder={{this.model}} @title={{t "accounts.new.title"}}/>
+<Account::Form @folder={{this.model}} @title={{t "accounts.new.title"}}/>
