--- a/frontend/app/templates/folders/edit.hbs
+++ b/frontend/app/templates/folders/edit.hbs
@@ -1,1 +1,1 @@
-<FolderForm @folder={{this.model}} @title={{t "folders.edit.title"}}/>
+<Folder::Form @folder={{this.model}} @title={{t "folders.edit.title"}}/>
