--- a/frontend/app/templates/profile.hbs
+++ b/frontend/app/templates/profile.hbs
@@ -21,7 +21,7 @@
     
     <tab.pane id="apiUsers" @title={{t "profile.api_users.api_users"}}>
       <div>
-        <ApiUsersTable @apiUsers={{@model.apiUsers}} />
+        <ApiUser::Table @apiUsers={{@model.apiUsers}} />
       </div>
     </tab.pane>
   </BsTab>
