--- a/frontend/app/templates/teams/edit.hbs
+++ b/frontend/app/templates/teams/edit.hbs
@@ -1,1 +1,1 @@
-<TeamForm @team={{this.model}} @title={{t "teams.edit.title"}}/>
+<Team::Form @team={{this.model}} @title={{t "teams.edit.title"}}/>
