--- a/frontend/app/templates/accounts/file-entries/new.hbs
+++ b/frontend/app/templates/accounts/file-entries/new.hbs
@@ -1,1 +1,1 @@
-<FileEntryForm @account={{this.model}} @title={{t "file_entries.new.title"}}/>
+<FileEntry::Form @account={{this.model}} @title={{t "file_entries.new.title"}}/>
