--- a/frontend/app/templates/folders/new.hbs
+++ b/frontend/app/templates/folders/new.hbs
@@ -1,1 +1,1 @@
-<FolderForm @team={{this.model}} @title={{t "folders.new.title"}}/>
+<Folder::Form @team={{this.model}} @title={{t "folders.new.title"}}/>
