--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -41,6 +41,12 @@
                       %a= nav_link t(:recrypt_requests), Rails.application.routes.url_helpers.admin_recryptrequests_path
                     %a= nav_link t('teams.title'), Rails.application.routes.url_helpers.admin_teams_path
                     %a= nav_link t('admin.maintenance_tasks.index.title'), Rails.application.routes.url_helpers.admin_maintenance_tasks_path
+                    -#%a= nav_link t(:settings), admin_settings_path
+                    -#- if policy(Recryptrequest).index?
+                    -#  %a= nav_link t(:recrypt_requests), admin_recryptrequests_path
+                    %a= nav_link t(:users), admin_users_path
+                    %a= nav_link t('teams.title'), admin_teams_path
+                    %a= nav_link t('admin.maintenance_tasks.index.title'), admin_maintenance_tasks_path
             %li
               = link_to(image_pack_tag("sign_out.svg", class: "logout-icon"), Rails.application.routes.url_helpers.session_destroy_path)
 
