--- a/frontend/app/templates/components/admin/user/table.hbs
+++ b/frontend/app/templates/components/admin/user/table.hbs
@@ -1,3 +1,14 @@
+{{#if this.isUserNew}}
+  <Admin::User::Form @onAbort={{this.toggleUserNew}} @onSuccess={{this.addUser}} @title={{t "admin.users.new.title"}} />
+{{/if}}
+<div class="container my-2">
+  <div class="row justify-content-end">
+    <div class="col-auto">
+      <button class="btn btn-primary" {{on "click" this.toggleUserNew}}>{{t "new"}}</button>
+    </div>
+  </div>
+</div>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -11,7 +22,7 @@
     </tr>
   </thead>
   <tbody>
-    {{#each @users as |user|}}
+    {{#each this.sortedUsers as |user|}}
       <Admin::User::TableRow @user={{user}} />
     {{/each}}
   </tbody>
