--- a/frontend/app/templates/components/footer.hbs
+++ b/frontend/app/templates/components/footer.hbs
@@ -1,34 +1,22 @@
-<div class="footer">
-  <div class="content">
-    <div class="w-250 w-140 float-left">
-      <a href="https://www.puzzle.ch" target="_blank" rel="noopener">
-        <span class="helper"></span>
-        <img src="/assets/images/puzzle_classic_rgb.png" alt="logo" class="puzzle-icon">
-      </a>
-    </div>
-    <div class="float-left p-10 show-not-on-hamburgermenu">
-      <a href="https://github.com/puzzle/cryptopus" target="_blank" rel="noopener">Cryptopus</a>
-      |
-      <a href="https://github.com/puzzle/cryptopus/wiki/User-manual" target="_blank" rel="noopener">{{t "help"}}</a>
-      |
-      <a href="/changelog">{{t "version"}} {{this.version}}</a>
-    </div>
-    <div class="float-right w-40 d-flex align-items-center justify-content-end full-height">
-      <div class="show-not-on-hamburgermenu">
-        <div class="d-inline">
-          <small>
-            {{t "auto_logout"}}
-            <span id="countdown">{{this.logoutTimerService.timeToLogoff}}</span>
-          </small>
-        </div>
-      </div>
-
-      <div class="ml-4 d-inline-block pr-12">
-        <PowerSelect id="locale-dropdown" @options={{this.availableLocales}} @selected={{this.selectedLocale}} @onChange={{this.setLocale}}
-                     @verticalPosition="above" @renderInPlace={{true}} as |locale|>
-          {{locale.name}}
-        </PowerSelect>
-      </div>
-    </div>
+<pzsh-footer class="footer">
+  <div slot="start">
+    <pzsh-footer-link href="/changelog">{{ t "version"}} {{this.version}}</pzsh-footer-link>
+    <pzsh-footer-link href="https://github.com/puzzle/cryptopus">
+      <pzsh-icon name="github"></pzsh-icon>
+      {{t "contribute_on_github"}}
+    </pzsh-footer-link>
   </div>
-</div>
+
+  <div slot="center">
+    <span id="countdown">{{t "auto_logout"}} {{this.logoutTimerService.timeToLogoff}}</span>
+  </div>
+
+  <div slot="end">
+    <PowerSelect id="locale-dropdown" @options={{this.availableLocales}} @selected={{this.selectedLocale}}
+                 @onChange={{this.setLocale}} @verticalPosition="above" @animationEnabled={{false}}
+                 @renderInPlace={{true}} as |locale|>
+      {{locale.name}}
+    </PowerSelect>
+    <img src="/assets/images/powered-by-puzzle-itc.svg" alt="powered by puzzle itc">
+  </div>
+</pzsh-footer>
