--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -1,80 +1,94 @@
-.navbar-custom {
-  background: #1b8dc6;
-  z-index: 998;
-}
-
-.custom-button {
-  background: none;
-  color: inherit;
-  border: none;
-  padding: 0;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
-}
-
-.custom-button:focus {
-  outline: 0;
-}
-
-.dropdown .btn-group > a {
-  color: #000000;
-  background-color: #c7d9e9;
-  border-color: #1b8cc5;
-}
-
-.dropdown .btn-group > a:last-child {
-  color: #000000;
-  background-color: rgba(199, 217, 233, 0.69);
-  border-color: #1b8cc5;
-}
-
-.dropdown .btn-group > a:hover {
-  color: #ffffff;
-  background-color: rgba(15, 101, 139, 0.89) !important;
-  border-color: #195575;
-}
-
-.dropdown-menu {
-  left: -114px !important;
-  width: 155px;
-}
-
-.dropdown .dropdown-item:active {
-  background-color: #f8f9fa;
-}
-
-.accountname {
-  max-width: 100%;
-  word-break: break-word;
-}
-
-.search {
-  border-radius: 8px;
-  border: none;
-  background-color: #c7d9e9;
-  color: #000000;
-}
-
-#search {
-  width: 100% !important;
-}
-
 .break-words {
   word-break: break-word;
 }
 
-#search::placeholder {
-  color: #000000;
+.search {
+  border: none;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
+  line-height: 1.8;
+  min-width: 52%;
+  padding-left: 10px;
 }
 
-@media (min-width: 470px) and (max-width: 990px) {
-  .navbar-collapse {
-    padding: 0 10% 0 10% !important;
+.search:focus {
+  outline: none !important;
+}
+
+.sign-out-icon {
+  width: 24px;
+  margin-right: 8px;
+}
+
+.action-wrapper > a {
+  color: #FFFFFF;
+}
+
+.actions {
+  align-items: center;
+}
+
+.action-wrapper {
+  background-color: #40a3d8;
+  align-content: center;
+  height: 100%;
+  border-bottom-right-radius: 3px;
+  border-top-right-radius: 3px;
+  padding: 2px 10px 2px 10px;
+}
+
+.dropdown-toggle::after {
+  display: none;
+}
+
+.input-wrapper {
+  display: flex;
+  width: 100%;
+  max-height: 32px;
+}
+
+.icon-dropdown-toggle-1 {
+  width: 24px;
+  padding-bottom: 1px;
+}
+
+.icon-dropdown-toggle-2 {
+  width: 24px;
+  padding-bottom: 2px;
+}
+
+.content {
+  min-height: 100%;
+}
+
+@media screen and (max-width: 1200px) {
+  .help {
+    display: none;
+  }
+
+  .search {
+    flex: 1;
+  }
+
+  .administration {
+    display: none;
   }
 }
 
-@media (min-width: 576px) and (max-width: 991px) {
+@media screen and (min-width: 1201px) {
+  .administration-dropdown {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .input-wrapper {
+    flex-direction: column;
+    padding: 0 20px 0 20px;
+    margin-bottom: 60px;
+    align-items: center;
+    gap: 20px;
+  }
 }
 
 @media screen and (max-width: 575px) {
@@ -86,6 +100,14 @@
     min-width: 80%;
     display: inline-block;
     word-break: break-word;
+  }
+
+  .input-wrapper {
+    flex-direction: column;
+  }
+
+  .action-wrapper {
+    border-radius: 3px;
   }
 }
 
@@ -107,7 +129,7 @@
     justify-content: space-between !important;
   }
 
-  .show-not-on-hamburgermenu {
+  .sidebar-wrapper {
     display: none !important;
   }
 
@@ -115,21 +137,8 @@
     margin-left: 0 !important;
   }
 
-  .search {
-    width: 100% !important;
-  }
-
-  .search-wrapper {
-    width: 100%;
-    margin-bottom: 0 !important;
-  }
-
   .ignore-footer-smartphone {
     padding-bottom: 50px !important;
-  }
-
-  .dropdown {
-    margin: 0 auto 15px;
   }
 
   .account-container-smartphone {
@@ -146,15 +155,6 @@
 
   .content {
     width: 90% !important;
-  }
-
-  .search {
-    width: 100% !important;
-    margin: 0 !important;
-  }
-
-  .search-wrapper {
-    width: 100%;
   }
 }
 
@@ -198,25 +198,12 @@
     color: white !important;
   }
 
-  .dropdown-toggle-hided::after {
-    display: none;
-  }
-
   .ml-238 {
     margin-left: 238px !important;
   }
 
   .vertical-center-icon {
     margin-bottom: 4px !important;
-  }
-
-  .search-wrapper {
-    width: 28vw;
-  }
-
-  .search {
-    width: 70% !important;
-    margin-left: 10px !important;
   }
 
   .side-nav-bar-teams-list .list-group-item:hover {
@@ -238,10 +225,16 @@
 }
 
 .well {
-  margin-bottom: 0px !important;
+  margin-bottom: 0 !important;
 }
 
 .white-svg {
   filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(360deg)
     brightness(102%) contrast(102%);
+}
+
+.cryptopus-logo {
+  display: block;
+  min-width: 214px;
+  min-height: 32px;
 }
