--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -3,11 +3,11 @@
 
 <div class="content">
   {{#if (not this.screenWidthService.isShownOnHamburgermenu)}}
-    <div class="show-not-on-hamburgermenu">
+    <div class="sidebar-wrapper">
       <SideNavBar/>
     </div>
   {{/if}}
-  <div class="mb-5 mt-60 ml-270px" role="main">
+  <div class="mb-5 ml-270px" role="main">
     {{outlet}}
   </div>
 </div>
