added countries to dropdown

--- a/frontend/app/templates/admin/settings.hbs
+++ b/frontend/app/templates/admin/settings.hbs
@@ -1,14 +1,13 @@
-<Admin::Settings></Admin::Settings>
-
 <div class="container py-2">
   <div class="mt-4">
     <h5><b>{{t "admin.settings.index.whitelisted_countries"}}</b></h5>
-    <PowerSelectMultiple
+    <PowerSelectMultiple  
+            insert-newline="save"
             @searchEnabled={{true}}
-            @options={{this.names}}
-            @selected={{this.name}}
-            @placeholder="Select some names..."
-            @onChange={{fn (mut this.name)}} as |name|>
+            @options={{@model.countryCodes}}
+            @placeholder="Select some countries..."
+            @selected={{this.selectedCountries}}
+            @onChange={{fn (mut this.selectedCountries )}} as |name|>
       {{name}}
     </PowerSelectMultiple>
     {{t "admin.settings.index.no_ips_selected"}}
@@ -16,9 +15,9 @@
     <PowerSelectMultiple
             @searchEnabled={{true}}
             @options={{this.names}}
-            @selected={{this.name}}
-            @placeholder="Select some names..."
-            @onChange={{fn (mut this.name)}} as |name|>
+            @selected={{this.selectedIPs}}
+            @placeholder="Select some IPs..."
+            @onChange={{fn (mut this.selectedIPs)}} as |name|>
       {{name}}
     </PowerSelectMultiple>
     {{t "admin.settings.index.specify_single_ip"}}: <kbd class="ip-highlight">192.0.2.10</kbd>.<br>
@@ -26,9 +25,5 @@
     {{t "admin.settings.index.range.specify_range_of_ips"}}: <kbd>192.0.2.0/24</kbd>. {{t "admin.settings.index.range.range_between"}} <kbd>192.0.2.0</kbd> {{t "admin.settings.index.range.and"}} <kbd>192.0.2.255</kbd><br>
 
     {{t "admin.settings.index.IPv6_allowed"}} <kbd>2001:db8::/32</kbd> <br>
-
-    <BsButton @type="primary" @icon="glyphicon glyphicon-download">
-      {{t "admin.settings.index.save"}}
-    </BsButton>
   </div>
 </div>
