--- a/frontend/app/templates/components/admin/user/table.hbs
+++ b/frontend/app/templates/components/admin/user/table.hbs
@@ -4,6 +4,9 @@
 <div class="container my-2">
   <div class="row justify-content-end">
     <div class="col-auto">
+      <LinkTo @route="index">
+        <button class="btn btn-primary">{{t "back"}}</button>
+      </LinkTo>
       <button class="btn btn-primary" {{on "click" this.toggleUserNew}}>{{t "new"}}</button>
     </div>
   </div>
