changed provider_uid in translations

--- a/frontend/app/templates/components/admin/user/table.hbs
+++ b/frontend/app/templates/components/admin/user/table.hbs
@@ -16,7 +16,7 @@
       <th>{{t "admin.users.index.name"}}</th>
       <th>{{t "admin.users.index.last_login_at"}}</th>
       <th>{{t "admin.users.index.last_login_from"}}</th>
-      <th>{{t "admin.users.index.auth"}}: {{t "admin.users.index.provider_uid"}}</th>
+      <th>{{t "admin.users.index.auth"}} {{t "admin.users.index.provider_uid"}}</th>
       <th width="200">{{t "admin.users.index.role"}}</th>
       <th>{{t "admin.users.index.action"}}</th>
     </tr>
